Add MQTT functionality to publish RFID UID data
- Created MQTT manager module (mqtt_manager.h/cpp)
- Added MQTT credentials configuration (gitignored)
- Integrated MQTT publishing when RFID tags are scanned
- Publishes UID data in JSON format to configured topic
- Handles MQTT connection and automatic reconnection
- Added PubSubClient library dependency
- MQTT only activates when WiFi is connected

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 
 # WiFi credentials - keep private
 src/config/wifi_credentials.h
+
+# MQTT credentials - keep private
+src/config/mqtt_credentials.h
