--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = 
 	miguelbalboa/MFRC522@^1.4.10
 	bodmer/TFT_eSPI@^2.5.43
+	knolleary/PubSubClient@^2.8
 monitor_speed = 115200
 build_flags = 
 	-DUSER_SETUP_LOADED=1
